--- a/helm/fleet.yaml
+++ b/helm/fleet.yaml
@@ -2,7 +2,7 @@
 
 # The namespace this chart will be installed and restricted to,
 # if not specified the chart will be installed to "default"
-namespace: cm-test
+namespace: "cmtest"
 
 # Custom helm options
 helm:
@@ -29,6 +29,7 @@ helm:
 
   # Custom values that will be passed as values.yaml to the installation
   values:
+    namespace: "cmtest"
     crds:
       enabled: true
       keep: false
