--- a/helm/fleet.yaml
+++ b/helm/fleet.yaml
@@ -2,12 +2,12 @@
 
 # The namespace this chart will be installed and restricted to,
 # if not specified the chart will be installed to "default"
-namespace: "cmtest"
+namespace: cmtest
 
 # Custom helm options
 helm:
   # The release name to use. If empty a generated release name will be used
-  #releaseName:
+  releaseName: cert-manager
 
   # The directory of the chart in the repo.  Also any valid go-getter supported
   # URL can be used there is specify where to download the chart from.
@@ -29,7 +29,7 @@ helm:
 
   # Custom values that will be passed as values.yaml to the installation
   values:
-    namespace: "cmtest"
+    namespace: cmtest
     crds:
       enabled: true
       keep: false
