--- a/helmexternal/fleet.yaml
+++ b/helmexternal/fleet.yaml
@@ -1,7 +1,7 @@
 namespace: cmtest
 helm:
   repo: https://github.com/cert-manager/cert-manager
-  chart: ./Chart
+  chart: ""
   values:
     namespace: cmtest
     crds:
