--- a/helmexternal/fleet.yaml
+++ b/helmexternal/fleet.yaml
@@ -1,6 +1,8 @@
 namespace: cmtest
 helm:
+  chart: jetstack/cert-manager
   repo: https://charts.jetstack.io
+  version: v1.15.3
   values:
     namespace: cmtest
     crds:
