--- a/helmexternal/fleet.yaml
+++ b/helmexternal/fleet.yaml
@@ -1,8 +1,8 @@
 defaultNamespace: cmtest
 helm:
-  chart: cert-manager
-  repo: https://charts.jetstack.io
-  version: v1.15.3
+  chart: git@github.com:cert-manager/cert-manager//deploy/charts/cert-manager
+  #repo: https://charts.jetstack.io
+  #version: v1.15.3
   values:
     namespace: cmtest
     crds:
