--- a/helmexternal/fleet.yaml
+++ b/helmexternal/fleet.yaml
@@ -1,6 +1,6 @@
 defaultNamespace: cmtest
 helm:
-  chart: git@github.com:cert-manager/cert-manager//deploy/charts/cert-manager
+  chart: git@github.com:cert-manager/cert-manager//deploy/charts/cert-manager/Chart.template.yaml
   #repo: https://charts.jetstack.io
   #version: v1.15.3
   values:
