--- a/helmexternal/fleet.yaml
+++ b/helmexternal/fleet.yaml
@@ -1,9 +1,9 @@
-defaultNamespace: cmtest
+defaultNamespace: cert-manager
 helm:
   releaseName: cert-manager
-  chart: git@github.com:cert-manager/cert-manager//deploy/charts/cert-manager/Chart.template.yaml
-  #repo: https://charts.jetstack.io
-  #version: v1.15.3
+  chart: cert-manager/cert-manager
+  repo: https://charts.jetstack.io
+  version: 1.15.3
   values:
     namespace: cmtest
     crds:
