--- a/helmexternal/fleet.yaml
+++ b/helmexternal/fleet.yaml
@@ -1,9 +1,9 @@
-defaultNamespace: cert-manager
+defaultNamespace: cmtest
 helm:
-  releaseName: cert-manager
-  chart: cert-manager/cert-manager
-  repo: https://charts.jetstack.io
-  version: 1.15.3
+  releaseName: test-cert-manager
+  chart: https://charts.jetstack.io/charts/cert-manager-v1.15.3.tgz
+  #repo: https://charts.jetstack.io
+  #version: 1.15.3
   values:
     namespace: cmtest
     crds:
