--- a/guestbook-exmaple/fleet.yaml
+++ b/guestbook-exmaple/fleet.yaml
@@ -1,26 +1,17 @@
-namespace: fleet-mc-helm-example
+defaultNamespace: example-gb-joeb
 targetCustomizations:
 - name: dev
   helm:
     values:
-      replication: false
+      replication: 2
   clusterSelector:
     matchLabels:
       env: dev
 
-- name: test
+- name: tool
   helm:
     values:
       replicas: 3
   clusterSelector:
     matchLabels:
-      env: test
-
-- name: prod
-  helm:
-    values:
-      serviceType: LoadBalancer
-      replicas: 3
-  clusterSelector:
-    matchLabels:
-      env: prod
+      env: tools
